# ai-platform-env

./: .gitignore  Dockerfile  README.md  __init__.py  app.py  baseline.py  check_api.py  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  pyrightconfig.json  requirements.txt  server.py  tasks.py
server/: app.py  env.py  inference.py  tasks.py
