[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AIPlatformEnv"
version = "0.1.0"
description = "AI platform evaluation benchmark for OpenEnv."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "openenv-core>=0.2.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "gradio>=4.0",
]

[project.scripts]
server = "server.app:main"
